bug 302333: Save and restore the DOM branch callback time around the GC, since GCing can cause it to be reset. r+sr=bzbarsky